nav section html codes

--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,20 @@
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
-    
+    <nav class="nav container">
+        <div class="logoPart">
+            <img src="public/images/logo.png" alt="logo" class="logo">
+            <h1 class="title">کافه دایان</h1>
+        </div>
+        <ul class="navMenu">
+            <li class="navMenuItem">صفحه اصلی</li>
+            <li class="navMenuItem">درباره ما</li>
+            <li class="navMenuItem">تماس با ما</li>
+        </ul>
+        <div class="phoneCall">
+            <p class="phoneNumber">09376586504</p>
+            <img class="phoneIcon" src="./public/images/icon.png" alt="call">
+        </div>
+    </nav>
 </body>
 </html>
