--- a/home.html
+++ b/home.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>کافه دایان</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/fonts.css">
-    <link rel="stylesheet" href="styles/home.css">
-    <link rel="stylesheet" href="styles/responsive.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/fonts.css" />
+    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
+  </head>
+  <body>
     <nav class="nav container">
-        <div class="logoPart">
-            <img src="public/images/logo.png" alt="logo" class="logo">
-            <h1 class="title">کافه دایان</h1>
-        </div>
-        <ul class="navMenu">
-            <li class="navMenuItem">صفحه اصلی</li>
-            <li class="navMenuItem">درباره ما</li>
-            <li class="navMenuItem">تماس با ما</li>
-        </ul>
-        <div class="phoneCall">
-            <p class="phoneNumber">09376586504</p>
-            <img class="phoneIcon" src="./public/images/icon.png" alt="call">
-        </div>
+      <div class="logoPart">
+        <img src="public/images/logo.png" alt="logo" class="logo" />
+        <h1 class="navTitle">کافه دایان</h1>
+      </div>
+      <ul class="navMenu">
+        <li class="navMenuItem">
+          <a href="#" class="navMenuLink navActive">صفحه اصلی</a>
+        </li>
+        <li class="navMenuItem">
+          <a href="#" class="navMenuLink">درباره ما</a>
+        </li>
+        <li class="navMenuItem">
+          <a href="#" class="navMenuLink">تماس با ما</a>
+        </li>
+      </ul>
+      <div class="phoneCall">
+        <p class="phoneNumber">6504 658 0937</p>
+        <img class="phoneIcon" src="./public/images/icon.png" alt="call" />
+      </div>
     </nav>
-</body>
+  </body>
 </html>
