header finished with responsive

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>کافه دایان</title>
-    <link rel="icon" href="./public/images/logo.png" type="image/png">
+    <link rel="icon" href="./public/images/logo.png" type="image/png" />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/fonts.css" />
     <link rel="stylesheet" href="styles/home.css" />
@@ -27,20 +27,23 @@
           <a href="#" class="navMenuLink">تماس با ما</a>
         </li>
       </ul>
-        <h1 class="mobileTitle">کافه دایان</h1>
+      <h1 class="mobileTitle">کافه دایان</h1>
       <div class="phoneCall">
         <p class="phoneNumber">6504 658 0937</p>
         <img class="phoneIcon" src="./public/images/icon.png" alt="call" />
       </div>
     </nav>
     <header class="header container">
-        <div class="rightPart">
-            <img src="./public/images/image.png" alt="image">
-        </div>
-        <div class="leftPart">
-            <h2 class="headerTitle">غذای روح شما اینجاست...</h2>
-            <p class="headerSubTitle">استراحت کنید <br> و از قهوه خود لذت ببرید.</p>
-        </div>
+      <div class="rightPart">
+        <img src="./public/images/image.png" alt="image" />
+      </div>
+      <div class="leftPart">
+        <h2 class="headerTitle">غذای روح شما اینجاست...</h2>
+        <p class="headerSubTitle">
+          استراحت کنید <br />
+          و از قهوه خود لذت ببرید.
+        </p>
+      </div>
     </header>
   </body>
 </html>
