menu section finished with responsive

--- a/index.html
+++ b/index.html
@@ -45,8 +45,73 @@
         </p>
       </div>
     </header>
-    <section class="menu">
-
+    <section class="menu container">
+      <h2 class="menuTitle">منوی دایان</h2>
+      <div class="menuCategories">
+        <div class="category">
+          <div class="categoryTop">
+            <img
+              class="catTopImg"
+              src="./public/images/cold.png"
+              alt="catTopImg"
+            />
+          </div>
+          <div class="categoryBot">
+            <h3 class="botCatTitle">بار سرد</h3>
+            <p class="botCaption">
+              این نوشیدنی های میتوانند خنک کننده خوبی باشند و در روزاهای گرم
+              میتوانند به شما انرژی و روحیه بدهند.
+            </p>
+          </div>
+        </div>
+        <div class="category">
+          <div class="categoryTop">
+            <img
+              class="catTopImg"
+              src="./public/images/cafe.png"
+              alt="catTopImg"
+            />
+          </div>
+          <div class="categoryBot">
+            <h3 class="botCatTitle">بار گرم</h3>
+            <p class="botCaption">
+              نوشیدنی های گرم برای تسکین درد و رفع خستگی و بهبود خواب بسیار مفید
+              هستند.
+            </p>
+          </div>
+        </div>
+        <div class="category">
+          <div class="categoryTop">
+            <img
+              class="catTopImg"
+              src="./public/images/vitamin.png"
+              alt="catTopImg"
+            />
+          </div>
+          <div class="categoryBot">
+            <h3 class="botCatTitle">ویتامینه</h3>
+            <p class="botCaption">
+              مصرف این نوع نوشیدنی باعث افزایش سیستم ایمنی بدن و بهبود کلی
+              سلامتی می شود.
+            </p>
+          </div>
+        </div>
+        <div class="category">
+          <div class="categoryTop">
+            <img
+              class="catTopImg"
+              src="./public/images/damnoosh.png"
+              alt="catTopImg"
+            />
+          </div>
+          <div class="categoryBot">
+            <h3 class="botCatTitle">دمنوش</h3>
+            <p class="botCaption">
+              نوشیدنی هایی که از عصاره گیاهان تهیه شده و خواص درمانی دارند.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
