choice section finished with responsive

--- a/index.html
+++ b/index.html
@@ -113,5 +113,37 @@
         </div>
       </div>
     </section>
+    <section class="choice container">
+      <h2 class="choiceTitle">بهترین انتخاب برای شما</h2>
+      <div class="choiceImgWrapper">
+        <img src="./public/images/3coffee.png" alt="choice" class="choiceImg" />
+      </div>
+      <div class="choices">
+        <div class="choiceWrapper">
+          <div class="choiceTikWrapper">
+            <img src="./public/images/tik.png" alt="tik" class="choiceTik" />
+          </div>
+          <p class="choiceText">کیفیت بالا</p>
+        </div>
+        <div class="choiceWrapper">
+          <div class="choiceTikWrapper">
+            <img src="./public/images/tik.png" alt="tik" class="choiceTik" />
+          </div>
+          <p class="choiceText">فضای آرام و دنج</p>
+        </div>
+        <div class="choiceWrapper">
+          <div class="choiceTikWrapper">
+            <img src="./public/images/tik.png" alt="tik" class="choiceTik" />
+          </div>
+          <p class="choiceText">محیطی دوستانه</p>
+        </div>
+        <div class="choiceWrapper">
+          <div class="choiceTikWrapper">
+            <img src="./public/images/tik.png" alt="tik" class="choiceTik" />
+          </div>
+          <p class="choiceText">تنوع بالا در انتخاب</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
