about section finished with responsive

--- a/index.html
+++ b/index.html
@@ -145,5 +145,13 @@
         </div>
       </div>
     </section>
+    <section class="about container">
+      <h2 class="aboutTitle">درباره ما</h2>
+      <div class="aboutImgWrapper">
+        <img src="./public/images/abbas.png" alt="abbas" class="aboutImg" />
+      </div>
+      <h2 class="aboutBoss">مدیریت</h2>
+      <p class="boss">عباس افرنگ</p>
+    </section>
   </body>
 </html>
