gallery section finished with responsive

--- a/index.html
+++ b/index.html
@@ -153,5 +153,24 @@
       <h2 class="aboutBoss">مدیریت</h2>
       <p class="boss">عباس افرنگ</p>
     </section>
+    <section class="gallery">
+      <div class="container galleryWrapper">
+        <img
+          src="./public/images/gallery3.png"
+          alt="gallery"
+          class="galleryImg"
+        />
+        <img
+          src="./public/images/gallery2.png"
+          alt="gallery"
+          class="galleryImg"
+        />
+        <img
+          src="./public/images/gallery1.png"
+          alt="gallery"
+          class="galleryImg"
+        />
+      </div>
+    </section>
   </body>
 </html>
