--- a/index.html
+++ b/index.html
@@ -172,5 +172,24 @@
         />
       </div>
     </section>
+    <section class="contact container">
+      <div class="contactRight">
+        <div class="addressWrapper">
+          <h3 class="addressTitle">آدرس: </h3>
+          <p class="addressText">گیلان ، سیاهکل ، چهارراه سینما ، کافه دایان</p>
+        </div>
+        <div class="callWrapper">
+          <h3 class="callTitle">تماس با ما: </h3>
+          <p class="callText">6504 658 0937</p>
+        </div>
+      </div>
+      <div class="contactLeft">
+        <img src="./public/images/map.png" alt="map" class="mapImg">
+      </div>
+    </section>
+    <footer class="footer">
+      
+    </footer>
   </body>
+  
 </html>
