--- a/index.html
+++ b/index.html
@@ -153,43 +153,42 @@
       <h2 class="aboutBoss">مدیریت</h2>
       <p class="boss">عباس افرنگ</p>
     </section>
-    <section class="gallery">
-      <div class="container galleryWrapper">
-        <img
-          src="./public/images/gallery3.png"
-          alt="gallery"
-          class="galleryImg"
-        />
-        <img
-          src="./public/images/gallery2.png"
-          alt="gallery"
-          class="galleryImg"
-        />
-        <img
-          src="./public/images/gallery1.png"
-          alt="gallery"
-          class="galleryImg"
-        />
+    <section class="galleryBg">
+      <div class="gallery container">
+        <div class="galleryWrapper">
+          <img
+            src="./public/images/gallery3.png"
+            alt="gallery"
+            class="galleryImg"
+          />
+          <img
+            src="./public/images/gallery2.png"
+            alt="gallery"
+            class="galleryImg"
+          />
+          <img
+            src="./public/images/gallery1.png"
+            alt="gallery"
+            class="galleryImg"
+          />
+        </div>
       </div>
     </section>
     <section class="contact container">
       <div class="contactRight">
         <div class="addressWrapper">
-          <h3 class="addressTitle">آدرس: </h3>
+          <h3 class="addressTitle">آدرس:</h3>
           <p class="addressText">گیلان ، سیاهکل ، چهارراه سینما ، کافه دایان</p>
         </div>
         <div class="callWrapper">
-          <h3 class="callTitle">تماس با ما: </h3>
+          <h3 class="callTitle">تماس با ما:</h3>
           <p class="callText">6504 658 0937</p>
         </div>
       </div>
       <div class="contactLeft">
-        <img src="./public/images/map.png" alt="map" class="mapImg">
+        <img src="./public/images/map.png" alt="map" class="mapImg" />
       </div>
     </section>
-    <footer class="footer">
-      
-    </footer>
+    <footer class="footer"></footer>
   </body>
-  
 </html>
