--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <a href="#" class="navMenuLink navActive">صفحه اصلی</a>
         </li>
         <li class="navMenuItem">
-          <a href="#" class="navMenuLink">درباره ما</a>
+          <a href="#about" class="navMenuLink">درباره ما</a>
         </li>
         <li class="navMenuItem">
-          <a href="#" class="navMenuLink">تماس با ما</a>
+          <a href="#contactUs" class="navMenuLink">تماس با ما</a>
         </li>
       </ul>
       <h1 class="mobileTitle">کافه دایان</h1>
@@ -145,7 +145,7 @@
         </div>
       </div>
     </section>
-    <section class="about container">
+    <section id="about" class="about container">
       <h2 class="aboutTitle">درباره ما</h2>
       <div class="aboutImgWrapper">
         <img src="./public/images/abbas.png" alt="abbas" class="aboutImg" />
@@ -174,7 +174,7 @@
         </div>
       </div>
     </section>
-    <section class="contact container">
+    <section id="contactUs" class="contact container">
       <div class="contactRight">
         <div class="addressWrapper">
           <h3 class="addressTitle">آدرس:</h3>
